<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/bottom_border"
    android:paddingLeft="10dp">
    <ImageView
        android:id="@+id/back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/back"
        android:layout_marginTop="2dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_pwd"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:layout_marginLeft="10dp" />
</LinearLayout>

    <EditText
        android:id="@+id/new_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:hint="@string/new_pwd"
        android:textSize="18sp"
        android:background="@drawable/bottom_border"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/new_pwd_agian"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:hint="@string/new_pwd_again"
        android:textSize="18sp"
        android:background="@drawable/bottom_border"
        android:inputType="textPassword"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="15dp"
    android:background="@drawable/bottom_border">
    <EditText
        android:id="@+id/phone_num"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:hint="@string/phone_edt"
        android:textSize="18sp"
        android:background="@drawable/bottom_border"/>
    <Button
        android:id="@+id/sent_code"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:text="@string/get_code"
        android:background="@drawable/border_radius"
        android:layout_centerVertical="true"
        android:textColor="@color/gray"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        android:background="@drawable/bottom_border">
        <EditText
            android:id="@+id/your_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:hint="@string/code_hint"
            android:textSize="18sp"
            android:background="@drawable/bottom_border"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <Button
        android:id="@+id/done_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:text="@string/done"
        android:background="@drawable/wathet_border_radius"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"/>

</LinearLayout>