<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        android:text="@string/app_title"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/app_titles"
        android:textSize="45sp"/>

    <RelativeLayout
        android:id="@+id/login_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_table">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_top_background"
                android:paddingRight="10dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/user"
                    android:layout_margin="10dp"/>
                <EditText
                    android:id="@+id/user_edt_register"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/nickname"
                    android:layout_weight="2"/>
                <ImageView
                    android:id="@+id/img_delete1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/delete"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:visibility="invisible"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_nobottom"
                android:paddingRight="10dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/phone"
                    android:layout_margin="10dp"/>
                <EditText
                    android:id="@+id/phone_edt"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:inputType="number"
                    android:hint="@string/phone_num"
                    android:layout_weight="2"/>
                <ImageView
                    android:id="@+id/img_delete2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/delete"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:visibility="invisible"/>
            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_bottom_background"
                android:paddingRight="10dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/password"
                    android:layout_margin="10dp"/>
                <EditText
                    android:id="@+id/pwd_register"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:hint="@string/pwd_hint"
                    android:layout_weight="2"/>
                <ImageView
                    android:id="@+id/img_delete3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/delete"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:visibility="invisible"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/code_box"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/border_radius"
            android:layout_below="@+id/login_table"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:gravity="center">
            <EditText
                android:id="@+id/code_edt"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="40dp"
                android:background="@color/white"
                android:hint="@string/code_hint"/>
            <Button
                android:id="@+id/code_btn"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="36dp"
                android:text="@string/get_code"
                android:textSize="15sp"
                android:background="@drawable/darkblue_border_radius"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn"
            android:layout_below="@+id/code_box"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/wathet_border_radius"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_login"
            android:textSize="18sp"
            android:textColor="#E78170" />
        <TextView
            android:id="@+id/just_look2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/justlool"
            android:layout_toRightOf="@+id/to_login"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:paddingLeft="15dp"
            android:background="@drawable/left_border"
            android:textColor="@color/gray"/>
    </RelativeLayout>
</RelativeLayout>