<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/app_title"
    android:text="@string/app_title"
    android:gravity="center"
    android:layout_marginTop="100dp"
    android:textColor="@color/app_titles"
    android:textSize="45sp"></TextView>


    <RelativeLayout
        android:id="@+id/login_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_table">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_top_background"
                android:paddingRight="10dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/user"
                    android:layout_margin="10dp"/>
                <EditText
                    android:id="@+id/user_edt"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/hint"
                    android:layout_weight="2"/>
                <ImageView
                    android:id="@+id/img_delete"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/delete"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:visibility="invisible"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_bottom_background"
                android:paddingRight="10dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/password"
                    android:layout_margin="10dp"/>
                <EditText
                    android:id="@+id/pwd"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:hint="@string/pwd_hint"
                    android:layout_weight="2"/>
                <ImageView
                    android:id="@+id/eye"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/close"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:visibility="invisible"/>
            </TableRow>
        </TableLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:layout_below="@+id/login_table"
            android:layout_marginTop="20dp"
            android:text="@string/app_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/wathet_border_radius"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_box"
        android:layout_marginTop="12dp"
        android:gravity="center">
        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:background="@color/white"
            android:textColor="@color/gray"
            android:textSize="18sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center">
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp"
            android:textColor="#E78170" />
        <TextView
            android:id="@+id/just_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/justlool"
            android:layout_toRightOf="@+id/register"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:paddingLeft="15dp"
            android:background="@drawable/left_border"
            android:textColor="@color/gray"/>
    </RelativeLayout>
</RelativeLayout>